# petroflow

./: .env.example  .gitignore  AGENT_EXECUTION_PLAN.md  CLAUDE.md  Makefile  OBSERVATIONS.md  PRD.md  docker-compose.dev.yml  docker-compose.yml  plan.md  sample-production-upload.csv  scratchpad.md  test_wells.csv
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260223_0001_initial_schema.py  20260225_0002_user_preferences.py  20260225_0003_pvt_studies.py  20260226_0004_material_balance.py  20260226_0005_well_test.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/api/v1/: router.py
backend/app/engine/dca/: __init__.py  arps.py  diagnostics.py  duong.py  fitting.py  forecasting.py  modified_hyp.py  monte_carlo.py  sedm.py
backend/app/middleware/: auth.py
backend/app/models/: __init__.py  base.py  dca.py  material_balance.py  production.py  project.py  pvt.py  user.py  well.py  well_test.py
backend/app/schemas/: common.py  dca.py  material_balance.py  production.py  pvt.py  well.py  well_test.py
backend/app/services/: import_service.py  production_service.py  well_service.py
backend/app/tasks/: celery_app.py  dca_tasks.py  import_tasks.py
backend/app/utils/: exceptions.py  pagination.py
backend/scripts/: seed_data.py
backend/tests/: conftest.py  test_auth_registration.py  test_dashboard_api_regression.py  test_dca_api_regression.py  test_dca_engine.py  test_import_api_regression.py  test_import_service.py  test_project_api_regression.py  test_pvt_api_regression.py
(+147 files in other folders)
